--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SamLau95/pg-chat-room#readme",
   "dependencies": {
+    "alt": "^0.17.8",
     "babel-core": "^5.8.24",
     "babel-eslint": "^4.1.2",
     "babel-loader": "^5.3.2",
