--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mocha": "^2.3.3",
     "nightwatch": "^0.8.6",
     "phantomjs": "^1.9.18",
+    "react-hot-loader": "^1.3.0",
     "webpack-dev-server": "^1.12.1"
   }
 }
