--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack": "^1.12.1"
   },
   "devDependencies": {
+    "babel-runtime": "^6.0.14",
     "chai": "^3.3.0",
     "eslint-config-airbnb": "0.0.8",
     "firebase-server": "^0.5.0",
