--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-runtime": "^6.0.14",
     "chai": "^3.3.0",
     "eslint-config-airbnb": "0.0.8",
+    "expose-loader": "^0.7.1",
     "firebase-server": "^0.5.0",
     "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
